# pliscomp

./: README.md  pyproject.toml
src/pliscomp/: main.py
tests/: conftest.py
tests/data/: for_loop_simplest_case.py
tests/unit/: test_pliscomp.py
